@@ -43,6 +43,7 @@ Version 0.8-5 (2009-01-26)
 Version 0.8-6 (2009-04-11)
  o Added VocabGrowth data, with an example of heplot() for a repeated measures design
  o Fixed label.ellipse in heplot.mlm.R to center the label horizontally
- 
+ o Added demo(OBK)
+ o Added axes= to heplot.mlm to fix warnings arising from axes=FALSE in pairs.mlm 
  
  
